[gd_scene load_steps=5 format=3 uid="uid://bjwp4lefkjdar"]

[ext_resource type="Script" path="res://scenes/level_up_choice/level_up_choice.gd" id="1_osphw"]
[ext_resource type="Texture2D" uid="uid://j772o4jxtki" path="res://dagger.png" id="2_x5ssm"]
[ext_resource type="Texture2D" uid="uid://cncbavqik5vqj" path="res://assets/Projectiles/7.png" id="3_d70g5"]
[ext_resource type="AudioStream" uid="uid://c7hco0cgcduj" path="res://assets/Audio/lofi-hiphop-chill-background-music-298551.mp3" id="4_y1wfa"]

[node name="LevelUpChoice" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_osphw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.239216, 0.239216, 0.239216, 0.415686)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.5
offset_right = 27.5
grow_horizontal = 2
grow_vertical = 2

[node name="DaggerButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
keep_pressed_outside = true
text = "Dagger"
icon = ExtResource("2_x5ssm")

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="AxeButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
keep_pressed_outside = true
text = "Axe"
icon = ExtResource("3_d70g5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y1wfa")
volume_db = -5.155

[connection signal="pressed" from="HBoxContainer/DaggerButton" to="." method="_on_dagger_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AxeButton" to="." method="_on_axe_button_pressed"]
